crates/plotnik-tests/tests/02-parser/recovery_unexpected/resync_to_next_definition.txt
A = (a)
^^^
B = (b)
$$$
C = (c)
------------------ DIAGNOSTICS -------------------
error: expected a pattern
 --> query.ptk:2:1
  |
2 | ^^^
  | ^^^
  |
help: start with `(` for a node, `[` for an alternation, `{` for a sequence, a quote for a literal token, or `_` for a wildcard

error: expected a pattern
 --> query.ptk:4:1
  |
4 | $$$
  | ^^^
  |
help: start with `(` for a node, `[` for an alternation, `{` for a sequence, a quote for a literal token, or `_` for a wildcard
